amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  * chg: transformed "EQ" button into a togglebutton, which can also hide the effect browser
  * add: new OpenGL analyzer, contributed by Enrico Ros <eros.kde@email.it>
  * fix: FreeBSD compile fixes, contributed by Markus Brueffer <brueffer@phoenix-systems.de>
  * fix: rewritten configure: checks properly for kdemultimedia presence,
         and adds --without-opengl and --without-gstreamer arguments

VERSION 0.9-beta1:
  * add: display warning when artsd is not running with realtime priority
  * add: Audioproperties are loaded as you scroll the playlist and get saved to playlist files
  * add: If trackname column is hidden, the title column will show the trackname until a title
         tag can replace it. If no title tag is found the trackname stays.
  * chg: Pressing "back" in Random Mode now works as expected and walks backwards
         through the list of recently played songs.
  * add: TitleProxy searches for a free local port (contributed by Stefan Gehn)
  * chg: Random Mode now stores the recently played songs in a buffer, which prevents
         playing the same songs too often.
  * add: "Play Next" context menu option
  * add: selected aRts-effects will be remembered on next program start, including settings
  * fix: sort numerical playlist columns in correct order
  * add: logarithmic fading algorithm makes crossfading smoother
  * add: Select a series of tracks, start inline tag-editing a tag and amaroK will prompt you to
         edit that tag for all tracks one-by-one. Also available: fill-down.
  * add: improved crossfading: will fade out smoothly when the stop button is pressed
  * fix: O(n) behavior for playlist scrolling fixed
  * add: setting to make playlist colours the KDE defaults
  * add: support for tag-editing directly in playlist
  * chg: replaced old FileBrowser with the comfortable fileselector from KDevelop