@@ -1,5 +1,12 @@
-INCLUDES = $(all_includes)
+INCLUDES = \
+	-I$(top_srcdir)/amarok/amarok \
+	$(taglib_includes) \
+	$(all_includes)
+
 METASOURCES = AUTO
+
 noinst_LIBRARIES =  libtitleproxy.a
+
 libtitleproxy_a_SOURCES =  titleproxy.cpp
+
 noinst_HEADERS =  titleproxy.h
