@@ -24,6 +24,7 @@ email                :
 #include <qobject.h>
 
 class QString;
+class MetaBundle;
 
 /**
  * @brief: Proxy for decoding Shoutcast metadata.
@@ -31,65 +32,53 @@ class QString;
 
 namespace TitleProxy
 {
-
-struct metaPacket
-{
-    QString streamName;
-    QString streamGenre;
-    QString streamUrl;
-    QString bitRate;
-    QString title;
-    QString url;
-};
-
-class Proxy : public QObject
-{
-        Q_OBJECT
-
-    public:
-        Proxy( KURL url );
-        ~Proxy();
-
-        KURL proxyUrl();
-
-    signals:
-        void error();
-        void metaData( const TitleProxy::metaPacket& );
-
-    public slots:
-
-    private slots:
-        void readRemote();
-        void processHeader( Q_LONG &index, Q_LONG bytesRead );
-        void accept();
-
-    private:
-        void transmitData( const QString &data );
-        QString extractStr( const QString &str, const QString &key );
-
-        // ATTRIBUTES ------
-        KURL m_url;
-        bool m_initSuccess;
-        int m_metaInt;
-        QString m_bitRate;
-        int m_byteCount;
-        uint m_metaLen;
-        QString m_metaData;
-        bool m_headerFinished;
-        QString m_headerStr;
-        int m_usedPort;
-
-        QString m_streamName;
-        QString m_streamGenre;
-        QString m_streamUrl;
-
-        char *m_pBuf;
-
-        KExtendedSocket m_sockRemote;
-        KExtendedSocket m_sockPassive;
-        KExtendedSocket *m_pSockProxy;
-};
-
+    class Proxy : public QObject
+    {
+            Q_OBJECT
+    
+        public:
+            Proxy( KURL url );
+            ~Proxy();
+    
+            KURL proxyUrl();
+    
+        signals:
+            void error();
+            void metaData( const MetaBundle& );
+    
+        public slots:
+    
+        private slots:
+            void readRemote();
+            void processHeader( Q_LONG &index, Q_LONG bytesRead );
+            void accept();
+    
+        private:
+            void transmitData( const QString &data );
+            QString extractStr( const QString &str, const QString &key );
+    
+// ATTRIBUTES ------
+            KURL            m_url;
+            bool            m_initSuccess;
+            int             m_metaInt;
+            int             m_bitRate;
+            int             m_byteCount;
+            uint            m_metaLen;
+            QString         m_metaData;
+            bool            m_headerFinished;
+            QString         m_headerStr;
+            int             m_usedPort;
+    
+            QString         m_streamName;
+            QString         m_streamGenre;
+            QString         m_streamUrl;
+    
+            char            *m_pBuf;
+    
+            KExtendedSocket m_sockRemote;
+            KExtendedSocket m_sockPassive;
+            KExtendedSocket *m_pSockProxy;
+    };
 }
 
 #endif
