@@ -3,6 +3,8 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+
+  * add: show stream metadata in on-screen-display
   * chg: transformed "EQ" button into a togglebutton, which can also hide the effect browser
   * add: new OpenGL analyzer, contributed by Enrico Ros <eros.kde@email.it>
   * fix: FreeBSD compile fixes, contributed by Markus Brueffer <brueffer@phoenix-systems.de>
